Ecommerce-Microservice/istio-manifests/auth-policy/auth-per-path.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "auth-require-valid-admin-jwt"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - from:
    - source:
       requestPrincipals: ["*"]
    when:
    - key: request.auth.claims[roles]
      values: ["ADMIN"]
    to:
    - operation:
        hosts: ["*"]
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "sign-inup-access"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["user.sqli.com"]
        paths: ["/users","/authenticate"]
        methods: ["POST"]
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "public-key-access"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["user.sqli.com"]
        paths: ["/keyInfos/*"]
        methods: ["GET"]
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "manage-products-access"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        hosts: ["products.sqli.com"]
        methods: ["*"]
    when:
    - key: request.auth.claims[roles]
      values: ["AGENT"]
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "allow-all-access-products"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["products.sqli.com"]
        methods: ["GET"]
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "shipping-access"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        hosts: ["shipping.sqli.com"]
        notMethods: ["POST"]
    when:
    - key: request.auth.claims[roles]
      values: ["DELIVERY"]
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "customer-check-shipping"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        hosts: ["shipping.sqli.com"]
        methods: ["GET"]
        paths: ["/shipping/status/*"]
    when:
    - key: request.auth.claims[roles]
      values: ["CUSTOMER"]
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "order-access"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        hosts: ["order.sqli.com"]
        notMethods: ["POST"]
    when:
    - key: request.auth.claims[roles]
      values: ["AGENT"]
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "checkout-cart-access"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        hosts: ["cart.sqli.com","checkout.sqli.com"]
    when:
    - key: request.auth.claims[roles]
      values: ["CUSTOMER"]
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "access-payment"
  namespace: dev-payment
spec:
  selector:
    matchLabels:
      app: payment
  action: DENY
  rules:
  - from:
    - source:
        notPrincipals: ["cluster.local/ns/dev-checkout/sa/checkout-svcacc"]
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "allow-all-access-reviews"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["reviews.sqli.com"]
